[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/warning.png" type="Texture" id=1]
[ext_resource path="res://scenes/entities/fracture.gd" type="Script" id=2]
[ext_resource path="res://sounds/Repair2.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Fracture" type="Sprite" groups=["fracture"]]
position = Vector2( 8, 8 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="RepairSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
